--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					<ul class="nav ace-nav">
 						<li class="grey">
 							<a data-toggle="dropdown" class="dropdown-toggle" href="#">
-								<i class="ace-icon fa fa-desktop"></i>
+								<i class="ace-icon fa fa-bell"></i>
 								<span class="badge badge-grey">4</span>
 							</a>
 							<ul class="dropdown-menu-right dropdown-navbar dropdown-menu dropdown-caret dropdown-close">
@@ -274,7 +274,7 @@
                     <!--中间展示面板-->
 					<div class="page-content">
 						<div id="middle-content">
-                            <iframe style="border:0px;frameborder:0px;width:100%;height:651px;scrolling=no" src="introduce.html">
+                            <iframe style="border:0px;frameborder:0px;width:100%;height:685px;scrolling=no" src="introduce.html">
                             </iframe>
                         </div>
 					</div>
