--- a/introduce.html
+++ b/introduce.html
@@ -6,6 +6,7 @@
 		<link href="resources/assets/css/bootstrap.min.css" rel="stylesheet" />
 		<link rel="stylesheet" href="resources/assets/fonts/fonts.googleapis.com.css" />
 		<link rel="stylesheet" href="resources/assets/css/ace.min.css" />
+        <style>body{overflow: hidden;}</style>
 	</head>
 <body>
     <div class="main-container">
@@ -21,6 +22,125 @@
                         PM项目管理系统
                     </strong>
                     ,以下项目基本情况简介.	
+                </div>
+                <hr>
+                <div class="row">
+                    <div class="col-sm-4">
+                        <div class="widget-box">
+                            <div class="widget-header widget-header-flat">
+                                <h4 class="smaller">
+                                    <i class="icon-quote-left smaller-80"></i>
+                                    项目成员
+                                </h4>
+                            </div>
+
+                            <div class="widget-body">
+                                <div class="widget-main">
+                                    <div class="dd" id="nestable">
+                                        <ol class="dd-list">
+                                            <li class="dd-item">
+                                                <div class="dd-handle btn-yellow no-hover">需求组</div>
+                                                <ol class="dd-list">
+                                                    <li class="dd-item">
+                                                        <div class="dd-handle">张三</div>
+                                                    </li>
+                                                    <li class="dd-item">
+                                                        <div class="dd-handle">李四</div>
+                                                    </li>
+                                                </ol>
+                                            </li>
+                                            <li class="dd-item">
+                                                <div class="dd-handle btn-pink no-hover">设计组</div>
+                                                <ol class="dd-list">
+                                                    <li class="dd-item">
+                                                        <div class="dd-handle">张三</div>
+                                                    </li>
+                                                    <li class="dd-item">
+                                                        <div class="dd-handle">李四</div>
+                                                    </li>
+                                                </ol>
+                                            </li>
+                                            <li class="dd-item">
+                                                <div class="dd-handle btn-grey no-hover">开发组</div>
+                                                <ol class="dd-list">
+                                                    <li class="dd-item">
+                                                        <div class="dd-handle">张三</div>
+                                                    </li>
+                                                    <li class="dd-item">
+                                                        <div class="dd-handle">李四</div>
+                                                    </li>
+                                                </ol>
+                                            </li>
+                                            <li class="dd-item">
+                                                <div class="dd-handle btn-purple no-hover">测试组</div>
+                                                <ol class="dd-list">
+                                                    <li class="dd-item">
+                                                        <div class="dd-handle">张三</div>
+                                                    </li>
+                                                    <li class="dd-item">
+                                                        <div class="dd-handle">李四</div>
+                                                    </li>
+                                                </ol>
+                                            </li>
+                                        </ol>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-8">
+                        <div class="row">
+                            <div class="col-xs-12">
+                                <div class="widget-box">
+                                    <div class="widget-header widget-header-flat">
+                                        <h4 class="smaller">项目背景</h4>
+                                    </div>
+
+                                    <div class="widget-body">
+                                        <div class="widget-main">
+                                            在社会飞速发展的形势下，项目无处不在，各行各业都有属于自身不同的项目，有了项目，就需要有项目计划，项目安排以及项目管理等事情。一个项目的管理好坏，直接影响到了项目的执行情况，收益好坏，良好的项目管理能很好地提高企业的竞争力。随着国家对基础建设的巨大投入，市场日趋激烈的竞争和经济的全球化浪潮，项目管理得到空前的重视和发展，从局部到全面应用，从表面到实际的企业需求。可以看到，项目管理已经在社会中扮演着重要的角色。使软件的开发流程更加合理，减少开发的耦合度，提高项目的开发效率，优化项目开发过程的数据管理。
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="space-6"></div>
+
+                        <div class="row">
+                            <div class="col-xs-12">
+                                <div class="widget-box">
+                                    <div class="widget-header widget-header-flat">
+                                        <h4 class="smaller">
+                                            <i class="icon-code"></i>
+                                            项目功能
+                                        </h4>
+                                    </div>
+
+                                    <div class="widget-body">
+                                        <div class="widget-main">
+                                            <dl id="dt-list-1">
+                                                <dt>用户模块</dt>
+                                                <dd>包含用户登录、注册、用户资料等功能。</dd>
+                                                <dt>系统消息</dt>
+                                                <dd>系统消息推送通知。</dd>
+                                                <dt>项目介绍</dt>
+                                                <dd>介绍项目基本情况，以及项目人员分配情况</dd>
+                                                <dt>数据管理</dt>
+                                                <dd>1、数据表管理</dd>
+                                                <dd>2、数据管理</dd>
+                                                <dt>项目资料</dt>
+                                                <dd>包含需求管理、设计管理、开发管理、测试管理、项目约束等功能</dd>
+                                                <dt>系统日志管理</dt>
+                                                <dd>记录用户日常操作情况，以及项目状态信息</dd>
+                                            </dl>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
