--- a/profile.html
+++ b/profile.html
@@ -6,6 +6,7 @@
 		<link href="resources/assets/css/bootstrap.min.css" rel="stylesheet" />
 		<link rel="stylesheet" href="resources/assets/fonts/fonts.googleapis.com.css" />
 		<link rel="stylesheet" href="resources/assets/css/ace.min.css" />
+        <style>body{overflow: hidden;}</style>
 	</head>
 	<body>
 		<div class="main-container" id="main-container">
