--- a/log.html
+++ b/log.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 	<head>
 		<meta charset="utf-8" />
 		<title>项目日志</title>
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="resources/assets/css/font-awesome.min.css" />
 		<link rel="stylesheet" href="resources/assets/fonts/fonts.googleapis.com.css" />
 		<link rel="stylesheet" href="resources/assets/css/ace.min.css" />
+        <style>body{overflow: hidden;}</style>
 	</head>
 <body>
 		<div class="main-container" id="main-container">
@@ -24,7 +25,7 @@
 											<div class="timeline-container">
 												<div class="timeline-label">
 													<span class="label label-primary arrowed-in-right label-lg">
-														<b>Today</b>
+														<b>今天</b>
 													</span>
 												</div>
 
@@ -38,54 +39,17 @@
 														<div class="widget-box transparent">
 															<div class="widget-header widget-header-small">
 																<h5 class="smaller">
-																	<a href="#" class="blue">Susan</a>
-																	<span class="grey">reviewed a product</span>
+																	<a href="#" class="blue">王五</a>
+																	<span class="grey">提交了任务B</span>
 																</h5>
-
 																<span class="widget-toolbar no-border">
 																	<i class="icon-time bigger-110"></i>
 																	16:22
 																</span>
-
-																<span class="widget-toolbar">
-																	<a href="#" data-action="reload">
-																		<i class="icon-refresh"></i>
-																	</a>
-
-																	<a href="#" data-action="collapse">
-																		<i class="icon-chevron-up"></i>
-																	</a>
-																</span>
 															</div>
-
 															<div class="widget-body">
 																<div class="widget-main">
-																	Anim pariatur cliche reprehenderit, enim eiusmod
-																	<span class="red">high life</span>
-
-																	accusamus terry richardson ad squid &hellip;
-																	<div class="space-6"></div>
-
-																	<div class="widget-toolbox clearfix">
-																		<div class="pull-left">
-																			<i class="icon-hand-right grey bigger-125"></i>
-																			<a href="#" class="bigger-110">Click to read &hellip;</a>
-																		</div>
-
-																		<div class="pull-right action-buttons">
-																			<a href="#">
-																				<i class="icon-ok green bigger-130"></i>
-																			</a>
-
-																			<a href="#">
-																				<i class="icon-pencil blue bigger-125"></i>
-																			</a>
-
-																			<a href="#">
-																				<i class="icon-remove red bigger-125"></i>
-																			</a>
-																		</div>
-																	</div>
+																	完成登录页面设计
 																</div>
 															</div>
 														</div>
@@ -101,7 +65,7 @@
 
 															<div class="widget-body">
 																<div class="widget-main">
-																	Going to cafe for lunch
+																	我更新了数据表test
 																	<div class="pull-right">
 																		<i class="icon-time bigger-110"></i>
 																		12:30
@@ -118,48 +82,18 @@
 
 														<div class="widget-box transparent">
 															<div class="widget-header widget-header-small">
-																<h5 class="smaller">New logo</h5>
+																<h5 class="smaller">正在处理任务D</h5>
 
 																<span class="widget-toolbar no-border">
 																	<i class="icon-time bigger-110"></i>
 																	9:15
 																</span>
-
-																<span class="widget-toolbar">
-																	<a href="#" data-action="reload">
-																		<i class="icon-refresh"></i>
-																	</a>
-
-																	<a href="#" data-action="collapse">
-																		<i class="icon-chevron-up"></i>
-																	</a>
-																</span>
 															</div>
 
 															<div class="widget-body">
 																<div class="widget-main">
-																	Designed a new logo for our website. Would appreciate feedback.
+																	完成功能A的开发工作
 																	<div class="space-6"></div>
-
-																	<div class="widget-toolbox clearfix">
-																		<div class="pull-right action-buttons">
-																			<div class="space-4"></div>
-
-																			<div>
-																				<a href="#">
-																					<i class="icon-heart red bigger-125"></i>
-																				</a>
-
-																				<a href="#">
-																					<i class="icon-facebook blue bigger-125"></i>
-																				</a>
-
-																				<a href="#">
-																					<i class="icon-reply light-green bigger-130"></i>
-																				</a>
-																			</div>
-																		</div>
-																	</div>
 																</div>
 															</div>
 														</div>
@@ -174,7 +108,13 @@
 															<div class="widget-header hidden"></div>
 
 															<div class="widget-body">
-																<div class="widget-main"> Took the final exam. Phew! </div>
+																<div class="widget-main"> 
+                                                                    任务D回退，需重新修改文档 
+                                                                    <div class="pull-right">
+																		<i class="icon-time bigger-110"></i>
+																		12:30
+																	</div>
+                                                                </div>
 															</div>
 														</div>
 													</div>
@@ -184,7 +124,7 @@
 											<div class="timeline-container">
 												<div class="timeline-label">
 													<span class="label label-success arrowed-in-right label-lg">
-														<b>Yesterday</b>
+														<b>昨天</b>
 													</span>
 												</div>
 
@@ -196,11 +136,10 @@
 
 														<div class="widget-box transparent">
 															<div class="widget-header widget-header-small">
-																<h5 class="smaller">Haloween party</h5>
-
-																<span class="widget-toolbar">
+																<h5 class="smaller">完成页面图片设计</h5>
+                                                                <span class="widget-toolbar no-border">
 																	<i class="icon-time bigger-110"></i>
-																	1 hour ago
+																	9:00
 																</span>
 															</div>
 
@@ -208,9 +147,7 @@
 																<div class="widget-main">
 																	<div class="clearfix">
 																		<div class="pull-left">
-																			Lots of fun at Haloween party.
-																			<br />
-																			Take a look at some pics:
+                                                                            任务已提交，大致的图片效果
 																		</div>
 
 																		<div class="pull-right">
@@ -237,14 +174,17 @@
 
 														<div class="widget-box transparent">
 															<div class="widget-header widget-header-small">
-																<h5 class="smaller">Lorum Ipsum</h5>
+																<h5 class="smaller">分发任务E</h5>
+                                                                <span class="widget-toolbar no-border">
+																	<i class="icon-time bigger-110"></i>
+																	9:00
+																</span>
 															</div>
 
 															<div class="widget-body">
 																<div class="widget-main">
-																	Anim pariatur cliche reprehenderit, enim eiusmod
-																	<span class="green bolder">high life</span>
-																	accusamus terry richardson ad squid &hellip;
+                                                                    接收人：李四；
+                                                                    任务E：实现登录页面编写
 																</div>
 															</div>
 														</div>
@@ -259,39 +199,34 @@
 															<div class="widget-header widget-header-small hidden"></div>
 
 															<div class="widget-body">
-																<div class="widget-main"> Going to cafe for lunch </div>
+																<div class="widget-main"> 
+                                                                    创建了数据表test2
+                                                                    <div class="pull-right">
+																		<i class="icon-time bigger-110"></i>
+																		12:30
+																	</div>
+                                                                </div>
 															</div>
 														</div>
 													</div>
 
 													<div class="timeline-item clearfix">
 														<div class="timeline-info">
-															<i class="timeline-indicator icon-bug btn btn-danger no-hover"></i>
+															<i class="timeline-indicator icon-trophy btn btn-pink no-hover green"></i>
 														</div>
 
-														<div class="widget-box">
-															<div class="widget-header header-color-red2 widget-header-small">
-																<h5 class="smaller">Critical security patch released</h5>
-
-																<span class="widget-toolbar no-border">
+														<div class="widget-box transparent">
+															<div class="widget-header widget-header-small">
+																<h5 class="smaller">实现图片浏览功能</h5>
+                                                                <span class="widget-toolbar no-border">
 																	<i class="icon-time bigger-110"></i>
-																	9:15
-																</span>
-
-																<span class="widget-toolbar">
-																	<a href="#" data-action="reload">
-																		<i class="icon-refresh"></i>
-																	</a>
-
-																	<a href="#" data-action="collapse">
-																		<i class="icon-chevron-up"></i>
-																	</a>
+																	15:00
 																</span>
 															</div>
 
 															<div class="widget-body">
 																<div class="widget-main">
-																	Please download the new patch for maximum security.
+                                                                    支持图片缩放，拖拽等功能
 																</div>
 															</div>
 														</div>
@@ -302,7 +237,7 @@
 											<div class="timeline-container">
 												<div class="timeline-label">
 													<span class="label label-grey arrowed-in-right label-lg">
-														<b>May 17</b>
+														<b>2016.04.20</b>
 													</span>
 												</div>
 
@@ -314,256 +249,17 @@
 
 														<div class="widget-box transparent">
 															<div class="widget-header widget-header-small">
-																<h5 class="smaller">Lorum Ipsum</h5>
+																<h5 class="smaller">完成任务A</h5>
 
 																<span class="widget-toolbar no-border">
 																	<i class="icon-time bigger-110"></i>
 																	10:22
 																</span>
-
-																<span class="widget-toolbar">
-																	<a href="#" data-action="reload">
-																		<i class="icon-refresh"></i>
-																	</a>
-
-																	<a href="#" data-action="collapse">
-																		<i class="icon-chevron-up"></i>
-																	</a>
-																</span>
 															</div>
 
 															<div class="widget-body">
 																<div class="widget-main">
-																	Anim pariatur cliche reprehenderit, enim eiusmod
-																	<span class="blue bolder">high life</span>
-																	accusamus terry richardson ad squid &hellip;
-																</div>
-															</div>
-														</div>
-													</div>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-
-								<div id="timeline-2" class="hide">
-									<div class="row">
-										<div class="col-xs-12 col-sm-10 col-sm-offset-1">
-											<div class="timeline-container timeline-style2">
-												<span class="timeline-label">
-													<b>Today</b>
-												</span>
-
-												<div class="timeline-items">
-													<div class="timeline-item clearfix">
-														<div class="timeline-info">
-															<span class="timeline-date">11:15 pm</span>
-
-															<i class="timeline-indicator btn btn-info no-hover"></i>
-														</div>
-
-														<div class="widget-box transparent">
-															<div class="widget-body">
-																<div class="widget-main no-padding">
-																	<span class="bigger-110">
-																		<a href="#" class="purple bolder">Susan</a>
-																		reviewed a product
-																	</span>
-
-																	<br />
-																	<i class="icon-hand-right grey bigger-125"></i>
-																	<a href="#">Click to read &hellip;</a>
-																</div>
-															</div>
-														</div>
-													</div>
-
-													<div class="timeline-item clearfix">
-														<div class="timeline-info">
-															<span class="timeline-date">12:30 pm</span>
-
-															<i class="timeline-indicator btn btn-info no-hover"></i>
-														</div>
-
-														<div class="widget-box transparent">
-															<div class="widget-body">
-																<div class="widget-main no-padding">
-																	Going to
-																	<span class="green bolder">veg cafe</span>
-																	for lunch
-																</div>
-															</div>
-														</div>
-													</div>
-
-													<div class="timeline-item clearfix">
-														<div class="timeline-info">
-															<span class="timeline-date">11:15 pm</span>
-
-															<i class="timeline-indicator btn btn-info no-hover"></i>
-														</div>
-
-														<div class="widget-box transparent">
-															<div class="widget-body">
-																<div class="widget-main no-padding">
-																	Designed a new logo for our website. Would appreciate feedback.
-																	<a href="#">
-																		Click to see
-																		<i class="icon-zoom-in blue bigger-110"></i>
-																	</a>
-
-																	<div class="space-2"></div>
-
-																	<div class="action-buttons">
-																		<a href="#">
-																			<i class="icon-heart red bigger-125"></i>
-																		</a>
-
-																		<a href="#">
-																			<i class="icon-facebook blue bigger-125"></i>
-																		</a>
-
-																		<a href="#">
-																			<i class="icon-reply light-green bigger-130"></i>
-																		</a>
-																	</div>
-																</div>
-															</div>
-														</div>
-													</div>
-
-													<div class="timeline-item clearfix">
-														<div class="timeline-info">
-															<span class="timeline-date">9:00 am</span>
-
-															<i class="timeline-indicator btn btn-info no-hover"></i>
-														</div>
-
-														<div class="widget-box transparent">
-															<div class="widget-body">
-																<div class="widget-main no-padding"> Took the final exam. Phew! </div>
-															</div>
-														</div>
-													</div>
-												</div>
-											</div>
-
-											<div class="timeline-container timeline-style2">
-												<span class="timeline-label">
-													<b>Yesterday</b>
-												</span>
-
-												<div class="timeline-items">
-													<div class="timeline-item clearfix">
-														<div class="timeline-info">
-															<span class="timeline-date">9:00 am</span>
-
-															<i class="timeline-indicator btn btn-success no-hover"></i>
-														</div>
-
-														<div class="widget-box transparent">
-															<div class="widget-body">
-																<div class="widget-main no-padding">
-																	<div class="clearfix">
-																		<div class="pull-left">
-																			<span class="orange2 bolder">Haloween party</span>
-
-																			Lots of fun at Haloween party.
-																			<br />
-																			Take a look at some pics:
-																		</div>
-
-																		<div class="pull-right">
-																			<i class="icon-chevron-left blue bigger-110"></i>
-
-																			&nbsp;
-																			<img alt="Image 4" width="36" src="resources/assets/images/gallery/thumb-4.jpg" />
-																			<img alt="Image 3" width="36" src="resources/assets/images/gallery/thumb-3.jpg" />
-																			<img alt="Image 2" width="36" src="resources/assets/images/gallery/thumb-2.jpg" />
-																			<img alt="Image 1" width="36" src="resources/assets/images/gallery/thumb-1.jpg" />
-																			&nbsp;
-																			<i class="icon-chevron-right blue bigger-110"></i>
-																		</div>
-																	</div>
-																</div>
-															</div>
-														</div>
-													</div>
-
-													<div class="timeline-item clearfix">
-														<div class="timeline-info">
-															<span class="timeline-date">9:00 am</span>
-
-															<i class="timeline-indicator btn btn-success no-hover"></i>
-														</div>
-
-														<div class="widget-box transparent">
-															<div class="widget-body">
-																<div class="widget-main no-padding">
-																	Anim pariatur cliche reprehenderit, enim eiusmod
-																	<span class="pink2 bolder">high life</span>
-																	accusamus terry richardson ad squid &hellip;
-																</div>
-															</div>
-														</div>
-													</div>
-
-													<div class="timeline-item clearfix">
-														<div class="timeline-info">
-															<span class="timeline-date">9:00 am</span>
-
-															<i class="timeline-indicator btn btn-success no-hover"></i>
-														</div>
-
-														<div class="widget-box transparent">
-															<div class="widget-body">
-																<div class="widget-main no-padding"> Going to cafe for lunch </div>
-															</div>
-														</div>
-													</div>
-
-													<div class="timeline-item clearfix">
-														<div class="timeline-info">
-															<span class="timeline-date">9:00 am</span>
-
-															<i class="timeline-indicator btn btn-success no-hover"></i>
-														</div>
-
-														<div class="widget-box transparent">
-															<div class="widget-body">
-																<div class="widget-main no-padding">
-																	<span class="red bolder">Critical security patch released</span>
-
-																	<br />
-																	Please download the new patch for maximum security.
-																</div>
-															</div>
-														</div>
-													</div>
-												</div>
-											</div>
-
-											<div class="timeline-container timeline-style2">
-												<span class="timeline-label">
-													<b>May 17</b>
-												</span>
-
-												<div class="timeline-items">
-													<div class="timeline-item clearfix">
-														<div class="timeline-info">
-															<span class="timeline-date">9:00 am</span>
-
-															<i class="timeline-indicator btn btn-grey no-hover"></i>
-														</div>
-
-														<div class="widget-box transparent">
-															<div class="widget-body">
-																<div class="widget-main no-padding">
-																	<span class="bolder blue">Lorum Ipsum</span>
-																	Anim pariatur cliche reprehenderit, enim eiusmod
-																	<span class="purple bolder">high life</span>
-																	accusamus terry richardson ad squid &hellip;
+                                                                    完成需求设计
 																</div>
 															</div>
 														</div>
