--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 		<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 		<title>PM项目管理系统</title>
         <!--bootstrap样式-->
@@ -13,6 +12,7 @@
         <!--ace框架样式-->
 		<link rel="stylesheet" href="resources/assets/css/ace.min.css" class="ace-main-stylesheet" id="main-ace-style" />
         <script src="resources/assets/js/jquery.2.1.1.min.js"></script>
+		js框架
 		<script src="resources/js/index.js"></script>
 		<script src="resources/js/app/dbApp/dbComp.js"></script>
         <!--bootstrap的js-->
@@ -161,6 +161,7 @@
 		</div>
 
         <!--左侧导航菜单-->
+		<!--等于号左边的表示属性，右边表示值-->
 		<div class="main-container" id="main-container">
 			<div id="sidebar" class="sidebar responsive">
 				<ul class="nav nav-list" id="pm-nav">
@@ -268,7 +269,7 @@
                     <!--中间展示面板-->
 					<div class="page-content">
 						<div id="middle-content">
-                            <iframe style="border:0px;frameborder:0px;width:100%;height:685px;scrolling=no" src="introduce.html">
+                            <iframe id="iframe" style="border:0px;frameborder:0px;width:100%;height:685px;scrolling=no" src="introduce.html">
                             </iframe>
                         </div>
 					</div>
