--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                     <!--中间展示面板-->
 					<div class="page-content">
 						<div id="middle-content">
-                            <iframe id="iframe" style="border:0px;frameborder:0px;width:100%;height:685px;scrolling=no" src="introduce.html">
+                            <iframe id="swan" style="border:0px;frameborder:0px;width:100%;height:685px;scrolling=no" src="introduce.html">
                             </iframe>
                         </div>
 					</div>
