--- a/item.html
+++ b/item.html
@@ -97,6 +97,10 @@
                                 <span style="float: left;margin-left: 80px;">L文档</span>
                                 <span class="label label-inverse arrowed-in"></span>
                             </a>
+                            <div style="margin-top:10px;">
+                                <label style="position:absolute;float:right;right:165px;" class="btn btn-sm btn-yellow">上一页</label>
+                                <label style="position:absolute;float:right;right:79px;" class="btn btn-sm btn-yellow">下一页</label>
+                            </div>
                         </div>
                     </div>
                 </div>
