--- a/db.html
+++ b/db.html
@@ -124,7 +124,7 @@
                                                 age //年龄
                                             </li>
                                             <li><i class="ace-icon fa fa-times red"></i>
-                                                height //身高
+                                                fav //爱好
                                             </li>
                                         </ul>
                                     </div>
@@ -135,7 +135,7 @@
                         <div class="col-xs-6 col-sm-3">
                             <div class="widget-box widget-color-blue">
                                 <div class="widget-header">
-                                    <h5 class="widget-title bigger lighter">任务表（task）</h5>
+                                    <h5 class="widget-title bigger lighter">文章表（text）</h5>
                                     <table border="0" class="ui-pg-table navtable" style="margin-right:10px;margin-top:7px;float:right;table-layout:auto;">
                                         <tr>
                                             <td class="ui-pg-button ui-corner-all" title="删除字段">
@@ -165,22 +165,19 @@
                                                 id //表id
                                             </li>
                                             <li><i class="ace-icon fa fa-times red"></i>
-                                                form_user_id //需求发起人id
+                                                user_id //文章作者id
                                             </li>
                                             <li><i class="ace-icon fa fa-times red"></i>
-                                                to_user_id //需求接收人id
+                                                title //文章标题
                                             </li>
                                             <li><i class="ace-icon fa fa-times red"></i>
-                                                content //需求内容
+                                                content //文章正文内容
                                             </li>
                                             <li><i class="ace-icon fa fa-times red"></i>
-                                                start_time //需求开始日期
+                                                datetime //创建日期
                                             </li>
                                             <li><i class="ace-icon fa fa-times red"></i>
-                                                end_time //需求结束时间
-                                            </li>
-                                            <li><i class="ace-icon fa fa-times red"></i>
-                                                end_time //需求状态
+                                                talk //评论
                                             </li>
                                         </ul>
                                     </div>
