--- a/log.html
+++ b/log.html
@@ -256,6 +256,11 @@
 											</div>
 										</div>
 									</div>
+									
+									<div>
+										<label style="position:absolute;float:right;right:200px;" class="btn btn-sm btn-yellow">上一页</label>
+										<label style="position:absolute;float:right;right:105px;" class="btn btn-sm btn-yellow">下一页</label>
+									</div>
 								</div>
 							</div>
 						</div>
