--- a/need.html
+++ b/need.html
@@ -273,6 +273,10 @@
                                                 </div>
                                             </div>
                                         </div>
+                                        <div>
+                                            <label style="position:absolute;float:right;right:100px;" class="btn btn-sm btn-yellow">上一页</label>
+                                            <label style="position:absolute;float:right;right:10px;" class="btn btn-sm btn-yellow">下一页</label>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
