--- a/db.html
+++ b/db.html
@@ -20,7 +20,7 @@
                     <i class="icon-ok green"></i>
                     当前项目
                     <strong class="blue">
-                        PM项目管理系统
+                        个人博客项目管理系统
                     </strong>
                     ,所使用的数据库为test.	
                 </div>
